--- a/kubernetes/wordpress.yaml
+++ b/kubernetes/wordpress.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wordpress
-  namespace: code-challenge
+  namespace: company-blog
   labels:
     app: wp-blog
 spec:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-claim
-  namespace: code-challenge
+  namespace: company-blog
   labels:
     app: wp-blog
 spec:
@@ -32,4 +32,3 @@ spec:
 #kind: Deployment
 #metadata:
 #  name: wordpress
-
